--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,11 @@
-body {
+html,
+body,
+#root {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  position: relative;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
 }
