tile style updates

--- a/client/src/components/Tile/Tile.css
+++ b/client/src/components/Tile/Tile.css
@@ -3,7 +3,12 @@
   width: 128px;
   height: 128px;
   display: inline-block;
-  border: 1px solid #666;
+  border: 1px solid #111;
   border-radius: 128px;
   margin: 16px;
+}
+
+.Tile:hover {
+  background-color: #666;
+  border: 1px solid #333;
 }
