--- a/client/src/containers/App/App.css
+++ b/client/src/containers/App/App.css
@@ -5,14 +5,28 @@
   height: 100%;
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+  background-color: #333;
+}
+
+::-webkit-scrollbar-thumb {
+  width: 8px;
+  background-image: -webkit-linear-gradient(#333, #8a8a8a, #333);
+}
+
 .App .Body {
   color: white;
   position: relative;
   height: calc(100% - 72px);
+  margin-top: 36px;
   padding: 42px;
+  padding-top: 6px;
+  overflow: auto;
 }
 
 .App .Header {
+  z-index: 100;
   color: white;
   position: fixed;
   top: 0;
@@ -23,6 +37,7 @@
 }
 
 .App .Footer {
+  z-index: 100;
   color: white;
   position: fixed;
   bottom: 0;
