--- a/client/src/components/Tile/Tile.css
+++ b/client/src/components/Tile/Tile.css
@@ -1,4 +1,5 @@
 .Tile {
+  position: relative;
   background-color: #333;
   width: 128px;
   height: 128px;
@@ -8,10 +9,39 @@
   background-repeat: no-repeat;
   background-size: cover;
   box-shadow: 0 0 64px 0 #111 inset, 0 0 64px 0 #111;
+  vertical-align: bottom;
+  text-align: center;
+  filter: grayscale(100%);
+}
+
+.Tile-label {
+  position: absolute;
+  font-size: 4em;
+  opacity: 0.7;
+  width: 100%;
+  top: 10px;
+  left: 0;
+  height: 100%;
+  vertical-align: bottom;
+  text-align: center;
 }
 
 .Tile:hover {
   background-color: #666;
 
   box-shadow: 0 0 3px 0 black inset, 0 0 3px 0 black;
+  filter: none;
+}
+
+.Tile:active {
+  width: auto;
+  height: 80%;
+  position: absolute;
+  background-color: #111;
+  background-size: contain;
+  background-position: center;
+  z-index: 2;
+  top: 0;
+  left: 10px;
+  right: 10px;
 }
