--- a/client/src/components/Tile/Tile.css
+++ b/client/src/components/Tile/Tile.css
@@ -36,7 +36,7 @@
 .Tile:active {
   width: auto;
   height: 80%;
-  position: absolute;
+  position: fixed;
   background-color: #111;
   background-size: contain;
   background-position: center;
