--- a/client/src/components/Tile/Tile.css
+++ b/client/src/components/Tile/Tile.css
@@ -87,6 +87,18 @@
   bottom: 0;
 }
 
+.Tile-title {
+  position: fixed;
+  left: -120px;
+  bottom: 190px;
+  transform: rotate(-90deg);
+}
+
+.input-group-text {
+  width: 36px;
+  font-family: 'menlo', monospace;
+}
+
 .Tile.opening .Tile-content.open {
   display: block;
 }
@@ -97,6 +109,15 @@
   opacity: 1;
   filter: brightness(100%);
   z-index: 101;
+}
+
+.Tile-body {
+  display: relative;
+  width: 50%;
+  margin-left: 25%;
+  margin-top: 100px;
+  min-width: 500px;
+  opacity: 0.7;
 }
 
 .Tile-header {
